--- a/registrasi.html
+++ b/registrasi.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="anggota.html" method="post">
+    <form action="anggota.html" method="GET">
         <h2>Formulir Registrasi Anggota Perpustakaan</h2>
 
         
