--- a/registrasi.html
+++ b/registrasi.html
@@ -16,7 +16,7 @@
         <input type="email" id="email" name="email" required><br><br>
 
         <label for="telepon">Nomor Telepon:</label><br>
-        <input type="number" id="telepon" name="telepon" required><br><br>
+        <input type="text" id="telepon" name="telepon" required><br><br>
 
         <label for="alamat">Alamat:</label><br>
         <textarea id="alamat" name="alamat" rows="4"></textarea><br><br>
@@ -30,51 +30,30 @@
         </div>
         <br>
 
-        <label for="tanggal_lahir">Tanggal Lahir:</label><br>
-        <input type="date" id="tanggal_lahir" name="tanggal_lahir"><br><br>
-
-        <label for="password">Buat Password:</label><br>
-        <input type="password" id="password" name="password" required><br><br>
-
-        <label for="ulangi_password">Ulangi Password:</label><br>
-        <input type="password" id="ulangi_password" name="ulangi_password" required><br><br>
-
         <button type="submit">Submit</button>
     </form>
 
     <script>
-        // Ambil form
-        const form = document.getElementById('form-registrasi');
-
-        // Event listener untuk submit form
-        form.addEventListener('submit', function (event) {
-            event.preventDefault(); // Mencegah reload
+        document.getElementById("form-registrasi").addEventListener("submit", function (event) {
+            event.preventDefault(); // Cegah pengiriman formulir default
 
             // Ambil data dari form
-            const nama = document.getElementById('nama').value;
-            const email = document.getElementById('email').value;
-            const telepon = document.getElementById('telepon').value;
-            const alamat = document.getElementById('alamat').value;
+            const nama = document.getElementById("nama").value;
+            const email = document.getElementById("email").value;
+            const telepon = document.getElementById("telepon").value;
             const jenisKelamin = document.querySelector('input[name="jenis_kelamin"]:checked').value;
-            const tanggalLahir = document.getElementById('tanggal_lahir').value;
 
             // Ambil data anggota dari localStorage
-            const anggota = JSON.parse(localStorage.getItem('anggota')) || [];
+            const anggota = JSON.parse(localStorage.getItem("anggota")) || [];
 
             // Tambahkan data baru
-            anggota.push({ nama, email, telepon, alamat, jenisKelamin, tanggalLahir });
+            anggota.push({ nama, email, telepon, jenisKelamin });
 
             // Simpan kembali ke localStorage
-            localStorage.setItem('anggota', JSON.stringify(anggota));
+            localStorage.setItem("anggota", JSON.stringify(anggota));
 
-            // Reset form
-            form.reset();
-
-            // Beri notifikasi
-            alert('Registrasi berhasil! Lihat daftar anggota.');
-
-            // Redirect ke halaman anggota
-            window.location.href = 'anggota.html';
+            // Redirect ke halaman data anggota
+            window.location.href = "anggota.html";
         });
     </script>
 </body>
